--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/Blog-App
+MONGO_URI=mongodb://localhost:27017/lavel-200-blog-app
 JWT_SECRET=your_jwt_secret
 
